Adds information on start

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,7 +25,8 @@ div.results {
 	width: 440px;
 	height: 380px;
 	padding: 10px;
-	background: #aeaeae;
+	background: #002832;
+	color: #809496;
 }
 
 .results div {
