Fixes bug where HTML wasn't being escaped

--- a/views/index.haml
+++ b/views/index.haml
@@ -18,7 +18,7 @@
     .results
       #result_holder
         ="#=> Hi there, sexy!"
-        =h @result
+        = @result
 
   %script{:charset => "utf-8", :src => "/javascripts/ace.js", :type => "text/javascript"}
   %script{:charset => "utf-8", :src => "/javascripts/theme-twilight.js", :type => "text/javascript"}
