--- a/views/index.haml
+++ b/views/index.haml
@@ -16,6 +16,7 @@
         %a.send-button.link-button{:href => "#"} Send my code!
         #loader
     .results
+      #error_message
       #result_holder
         ="#=> Hi there, sexy!"
         = @result
@@ -24,4 +25,5 @@
   %script{:charset => "utf-8", :src => "/javascripts/theme-twilight.js", :type => "text/javascript"}
   %script{:charset => "utf-8", :src => "/javascripts/mode-ruby.js", :type => "text/javascript"}
   %script{:charset => "utf-8", :src => "/javascripts/jquery-1.7.2.min.js", :type => "text/javascript"}
+  %script{:charset => "utf-8", :src => "/javascripts/jquery-ui-1.8.21.custom.min.js", :type => "text/javascript"}
   %script{:charset => "utf-8", :src => "/application.js", :type => "text/javascript"}
