Updates index with more credits

--- a/views/index.haml
+++ b/views/index.haml
@@ -29,7 +29,9 @@
       .end_column
   %footer
     Another useless project made by
-    Alvaro Pereyra (@Yaraher) - alvaro@xenda.pe -
+    Alvaro Pereyra (
+    %a{:href=>"http://twitter.com/yaraher"}@Yaraher
+    ) - alvaro AT xenda.pe -
     %a{:href=>"http://xenda.pe", :target => "_blank"} http://xenda.pe
 
 
