--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -84,6 +84,7 @@ font-size: 20px;
 	padding: 10px;
 	background: #002832;
 	height: 380px;
+	overflow-y: scroll;
       -webkit-box-shadow: 0px 0px 10px rgba(50, 50, 50, 1);
 -moz-box-shadow:    0px 0px 10px rgba(50, 50, 50, 1);
 box-shadow:         0px 0px 10px rgba(50, 50, 50, 1);
