--- a/views/index.haml
+++ b/views/index.haml
@@ -45,3 +45,13 @@
   %script{:charset => "utf-8", :src => "/javascripts/jquery-1.7.2.min.js", :type => "text/javascript"}
   %script{:charset => "utf-8", :src => "/javascripts/jquery-ui-1.8.21.custom.min.js", :type => "text/javascript"}
   %script{:charset => "utf-8", :src => "/application.js", :type => "text/javascript"}
+  :javascript
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-32559851-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
